--- a/index.html
+++ b/index.html
@@ -21,19 +21,19 @@
                 <nav class="header__nav" aria-label="navigation list">
                     <ul class="header__nav-list">
                         <li class="header__nav-item">
-                            <a href="#" class="header__nav-link">Why Alivio</a>
+                            <a href="#about-id" class="header__nav-link">Why Alivio</a>
                         </li>
 
                         <li class="header__nav-item">
-                            <a href="#" class="header__nav-link">Solutions</a>
+                            <a href="#success-id" class="header__nav-link">Solutions</a>
                         </li>
 
                         <li class="header__nav-item">
-                            <a href="#" class="header__nav-link">Community</a>
+                            <a href="#product-id" class="header__nav-link">Community</a>
                         </li>
 
                         <li class="header__nav-item">
-                            <a href="#" class="header__nav-link">Pricing</a>
+                            <a href="#pricing-id" class="header__nav-link">Pricing</a>
                         </li>
                     </ul>
                 </nav>
@@ -47,7 +47,7 @@
     </header>
 
     <main>
-        <section class="hero" aria-label="hero section">
+        <section class="hero" id="hero-id" aria-label="hero section">
             <div class="container">
                 <div class="hero__content">
                     <h1 class="hero__title">Be aware, Manage well.</h1>
@@ -56,7 +56,7 @@
                 </div>
             </div>
         </section>
-        <section class="about" aria-label="about section">
+        <section class="about" id="about-id" aria-label="about section">
             <div class="container">
                 <!-- <h3 class="about__subtitle">How it works</h3> -->
 
@@ -87,7 +87,7 @@
                 </div>
             </div>
         </section>
-        <section class="success" aria-label="success section">
+        <section class="success" id="success-id" aria-label="success section">
             <div class="container">
                 <div class="success__wrapper">
                     <div class="success__content">
@@ -106,7 +106,7 @@
                 </div>
             </div>
         </section>
-        <section class="product" aria-label="product section">
+        <section class="product" id="product-id" aria-label="product section">
             <div class="container">
                 <div class="product__wrapper">
                     <div class="product__preview">
@@ -137,7 +137,33 @@
             </div>
         </section>
     </main>
+    <footer class="footer">
+        <div class="container">
+            <div class="pricing__content">
+                <h2 class="pricing__title">Alivio</h2>
+                <nav class="footer__nav" aria-label="navigation list">
+                    <ul class="footer__nav-list">
+                        <li class="footer__nav-item">
+                            <a href="#about-id" class="footer__nav-link">Why Alivio</a>
+                        </li>
 
+                        <li class="footer__nav-item">
+                            <a href="#success-id" class="footer__nav-link">Solutions</a>
+                        </li>
+
+                        <li class="footer__nav-item">
+                            <a href="#product-id" class="footer__nav-link">Community</a>
+                        </li>
+
+                        <li class="footer__nav-item">
+                            <a href="#pricing-id" class="footer__nav-link">Pricing</a>
+                        </li>
+                    </ul>
+                </nav>
+            </div>
+        </div>
+    </footer>
+    
 </body>
 
 </html>
